--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h2>About manjuTechPvtLtd</h2>
+<h2>About manjuTechPvtLtd , india </h2>
 <p> we teach devops and cloud technologies in more practical way with real time examples </p>
 </body>
 </html>
