--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h2>About manjuTechPvtLtd , india </h2>
-<p> we teach devops and cloud technologies in more practical way with real time examples </p>
+<p> we teach devops tools,git,git hub, maven ,jenkins,docker,ansible,k8s,terraform,prometheus,grafana, and cloud technologies in more practical way with real time examples </p>
 </body>
 </html>
 
