updated the file

--- a/address.html
+++ b/address.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h3>Address</h3>
-<pre> email:manjutechsolution@gmail.in,manjuTechs,Bangalore,560021 </pre>
+<pre> manjuTechs,Bangalore,560020 </pre>
 </body>
 </html>
