--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 home.html
 <html>
 <body>
-<h2>manjuTechsPvtLtd,india,bangalore</h2>
+<h2>manjuTechsPvtLtd</h2>
 <p> the instiute which provides devops tutorial with real time examples </p>
 </body>
 </html>
